#128 JDK11 compatibility (#266)
* #127: changes to build w/o tests

* #128: jdk11: major changes in persistence - WIP

# Conflicts:
#	src/services/core/persistence/pom.xml
#	src/services/core/persistence/src/main/java/org/geoserver/geofence/core/dao/impl/GFUserDAOImpl.java
#	src/services/core/persistence/src/main/java/org/geoserver/geofence/core/dao/impl/GSInstanceDAOImpl.java
#	src/services/core/persistence/src/main/java/org/geoserver/geofence/core/dao/impl/GSUserDAOImpl.java
#	src/services/core/persistence/src/main/java/org/geoserver/geofence/core/dao/impl/LayerDetailsDAOImpl.java
#	src/services/core/persistence/src/main/java/org/geoserver/geofence/core/dao/impl/UserGroupDAOImpl.java
#	src/services/core/persistence/src/test/java/org/geoserver/geofence/core/dao/RuleDAOTest.java
#	src/services/core/services-impl/src/main/java/org/geoserver/geofence/services/RuleReaderServiceImpl.java
#	src/services/core/services-impl/src/main/java/org/geoserver/geofence/services/util/FilterUtils.java
#	src/services/core/webtest/pom.xml
#	src/services/modules/ldap/pom.xml
#	src/services/modules/rest/impl/src/main/java/org/geoserver/geofence/services/rest/utils/MultiPolygonUtils.java
#	src/services/modules/rest/test/pom.xml
#	src/services/pom.xml

* #128: jdk11: first set of fixes in services - WIP

# Conflicts:
#	src/services/core/services-impl/src/main/java/org/geoserver/geofence/services/util/FilterUtils.java

* #128: jdk11: services-impl modules builds - WIP

# Conflicts:
#	src/services/core/services-impl/src/main/java/org/geoserver/geofence/services/RuleReaderServiceImpl.java
#	src/services/pom.xml

* #128: jdk11: ldap refactoring

# Conflicts:
#	src/services/modules/ldap/pom.xml
#	src/services/modules/ldap/src/main/java/org/geoserver/geofence/ldap/utils/LdapUtils.java

* #128: jdk11: various fixes (webtest, rest, ...)

# Conflicts:
#	src/services/core/webtest/pom.xml
#	src/services/core/webtest/src/main/resources/log4j.xml
#	src/services/core/webtest/src/main/webapp/WEB-INF/web.